--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bulma": "^0.9.4",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13"
   },
